Tweaks to legacy playback